[package]
name = "dioxane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
cfg-if = "1"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive"]}
anyhow = "1.0"
cgmath = "0.18"
tobj =  { version = "3.2.1", features = [ "async",]}
wgpu = "0.15.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

